--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #f3e5d7;
+    background-color: hsl(30, 54%, 90%);
 }
 
 body > div {
@@ -44,4 +44,47 @@ p {
     color: #5f564d;
     line-height: 150%;
     margin-bottom: 32px;
+}
+
+.tempo {
+    background:#fff7fb ;
+    padding: 28px;
+    border-radius: 12px;
+}
+
+.tempo h2 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 100%;
+    font-family: 'outfit', sans-serif;
+    color: #7a284e;
+    margin-bottom: 16px;
+}
+
+li {
+    padding-left: 10px;
+    color: #5f564d;
+    line-height: 150%;
+}
+
+
+li + li {
+margin-top: 8px;
+}
+
+
+ol, ul {
+    margin-left: 20px;
+}
+
+.tempo li::marker {
+    color: #7a284e;
+    font-size: 12px;
+}
+
+h2 {
+    font-size: 28px;
+    color: #854632;
+    line-height: 100%;
+    margin-bottom: 24px;
 }
